2003-11-16  Tim Legant  <tim@catseye.net>

	* Auth.py (Auth.init_auth_method): Cleaned up exception handling
	so that error messages could actually be read!

	* (Auth.init_remote): Fixed IMAP4_SSL class definition.
	Previously, it was defined as a local variable which just
	disappeared after init_remote() finished.  Now, we store it in an
	instance variable named IMAP4_SSL.  Also, fixed various code
	issues to bring it in line with the version distributed with
	Python 2.3.

	* Errors.py (AddressError, QueueError): Removed __repr__ method.
	Called ancestor's __init__.

	* (AuthError): Renamed __repr__ to __str__; cleaned it up.  Called
	ancestor's __init__.

2003-11-11  Tim Legant  <tim@catseye.net>

	* AutoResponse.py (AutoResponse.__init__): Recreate incoming
	message using the full email.Parser.Parser rather than the
	HeaderParser.  Substitute 'body suppressed" message if necessary
	before re-parsing.  This allows us to attach the message object to
	the auto-response and allows Generator to correctly produce a
	message in send(), even if the original message contained an
	attachment of type message/rfc822.

	(AutoResponse.create): Moved code checking message size to
	__init__.

2003-10-14  Jason R. Mastaler  <jason@mastaler.com>

	* Deliver.py (Deliver.__deliver_maildir): Use os.open() and
	os.fdopen() in place of __builtins__.open() to create the file.
	
2003-10-13  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (OUTGOINGMAIL): Change default to 'sendmail'.
	(MAIL_TRANSPORT): OUTGOINGMAIL renamed.

2003-10-09  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (sendmail): If using /usr/sbin/sendmail, pass a tuple of
	arguments into pipecmd() instead of a string to avoid the shell
	completely.  Also, add '-i' to the list of args.
	
	* Version.py (PLATFORM): Use the more descriptive 'platform'
	module if it's available.

2003-10-01  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (getfullname): Change default fallback value to an empty